@@ -9,10 +9,7 @@
 
 \usage{
 mxRun(model, ..., intervals = FALSE, silent = FALSE, suppressWarnings = FALSE, 
-	unsafe = FALSE, chkpt.directory = ".", chkpt.prefix = "", 
-	chkpt.units = c("minutes", "iterations"), chkpt.count = 0, 
-	sock.server = NULL, sock.port = NULL, sock.units = c("minutes", "iterations"),
-	sock.count = 0)
+	unsafe = FALSE, checkpoint = FALSE, useSocket = FALSE)
 }
 
 \arguments{
@@ -22,14 +19,8 @@ mxRun(model, ..., intervals = FALSE, silent = FALSE, suppressWarnings = FALSE,
     \item{silent}{A boolean indicating whether to print status to terminal.}
     \item{suppressWarnings}{A boolean indicating whether to suppress warnings.}    
     \item{unsafe}{A boolean indicating whether to ignore errors.}
-	\item{chkpt.directory}{A character string indicating the checkpoint directory.}
-	\item{chkpt.prefix}{A character string indicating the filename prefix.}
-	\item{chkpt.units}{The measure of units for checkpointing.}
-	\item{chkpt.count}{The number of units that must transpire between checkpoints.}
-	\item{sock.server}{A character string for the server name.}
-	\item{sock.port}{A numeric value for the port on the server.}
-	\item{sock.units}{The measure of units for socket communication.}
-	\item{sock.count}{The number of units that must transpire between socket messages.}
+	\item{checkpoint}{A boolean indicating whether to periodically write parameter values to a file.}
+	\item{useSocket}{A boolean indicating whether to periodically write parameter values to a socket.}
 }
 
 \details{
