@@ -1,6 +1,8 @@
 trunk
 =====
 * added 'newlabels' argument to omxSetParameters() function
+* now throwing errors to the user when detected from the backend in mxRun()
+* very basic checkpointing mechanism implemented
 
 Release 0.3.1-1246 (May 09, 2010)
 =================================
